# testproj

./: CMakeLists.txt
testproj_lib/: CMakeLists.txt  util.h
tests/: CMakeLists.txt  util.test.cpp
